--- a/model/general_model.ipynb
+++ b/model/general_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -204,7 +204,7 @@
        "4                1          1               1             2  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -400,7 +400,7 @@
        "4            1                 0             0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -444,10 +444,10 @@
     {
      "data": {
       "text/plain": [
-       "<statsmodels.regression.linear_model.RegressionResultsWrapper at 0xa456eb8>"
+       "<statsmodels.regression.linear_model.RegressionResultsWrapper at 0x9b13630>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -472,8 +472,8 @@
       "Dep. Variable:                      y   R-squared:                       0.223\n",
       "Model:                            OLS   Adj. R-squared:                  0.223\n",
       "Method:                 Least Squares   F-statistic:                     753.8\n",
-      "Date:                Thu, 17 May 2018   Prob (F-statistic):               0.00\n",
-      "Time:                        17:47:43   Log-Likelihood:            -6.0113e+05\n",
+      "Date:                Fri, 18 May 2018   Prob (F-statistic):               0.00\n",
+      "Time:                        17:51:55   Log-Likelihood:            -6.0113e+05\n",
       "No. Observations:               41934   AIC:                         1.202e+06\n",
       "Df Residuals:                   41917   BIC:                         1.202e+06\n",
       "Df Model:                          16                                         \n",
@@ -520,12 +520,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "results = sm.OLS(data[\"views\"], data.drop([\"views\", \"year_interval\",\"efficiency\",\"in_degree\",\"k_core\",\"out_degree\"], axis=1)).fit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "entered                int64\n",
+       "efficiency           float64\n",
+       "eig_central          float64\n",
+       "in_degree              int64\n",
+       "k_core                 int64\n",
+       "out_degree             int64\n",
+       "views                float64\n",
+       "age                    int64\n",
+       "distance_birth         int64\n",
+       "distance_death         int64\n",
+       "distance_delta         int64\n",
+       "nationality_num        int64\n",
+       "party_num              int64\n",
+       "occupation_num         int64\n",
+       "year_interval       category\n",
+       "gender_female          uint8\n",
+       "gender_male            uint8\n",
+       "is_alive_no            uint8\n",
+       "is_alive_unknown       uint8\n",
+       "is_alive_yes           uint8\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>OLS Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>          <td>views</td>      <th>  R-squared:         </th>  <td>   0.215</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th>  <td>   0.215</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th>  <td>   1044.</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>             <td>Fri, 18 May 2018</td> <th>  Prob (F-statistic):</th>   <td>  0.00</td>   \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                 <td>18:00:13</td>     <th>  Log-Likelihood:    </th> <td>-6.0135e+05</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>No. Observations:</th>      <td> 41934</td>      <th>  AIC:               </th>  <td>1.203e+06</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Residuals:</th>          <td> 41922</td>      <th>  BIC:               </th>  <td>1.203e+06</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Model:</th>              <td>    11</td>      <th>                     </th>      <td> </td>     \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>      <td> </td>     \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "          <td></td>            <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th> <th>[95.0% Conf. Int.]</th> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>entered</th>          <td> -457.8647</td> <td>  600.536</td> <td>   -0.762</td> <td> 0.446</td> <td>-1634.928   719.198</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>eig_central</th>      <td> 4.394e+07</td> <td>  4.2e+05</td> <td>  104.636</td> <td> 0.000</td> <td> 4.31e+07  4.48e+07</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>age</th>              <td> -379.2397</td> <td>  132.182</td> <td>   -2.869</td> <td> 0.004</td> <td> -638.319  -120.160</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>distance_birth</th>   <td>   61.0989</td> <td>   32.602</td> <td>    1.874</td> <td> 0.061</td> <td>   -2.802   125.000</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>distance_death</th>   <td>   87.2778</td> <td>   27.656</td> <td>    3.156</td> <td> 0.002</td> <td>   33.071   141.485</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>distance_delta</th>   <td>  -26.1790</td> <td>   35.429</td> <td>   -0.739</td> <td> 0.460</td> <td>  -95.620    43.262</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>nationality_num</th>  <td>-3344.2506</td> <td> 3582.955</td> <td>   -0.933</td> <td> 0.351</td> <td>-1.04e+04  3678.416</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>party_num</th>        <td> 6177.6101</td> <td> 2888.531</td> <td>    2.139</td> <td> 0.032</td> <td>  516.030  1.18e+04</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>occupation_num</th>   <td> 1.238e+04</td> <td> 2120.774</td> <td>    5.836</td> <td> 0.000</td> <td> 8219.179  1.65e+04</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>gender_female</th>    <td> 5.575e+05</td> <td> 7.25e+05</td> <td>    0.769</td> <td> 0.442</td> <td>-8.63e+05  1.98e+06</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>gender_male</th>      <td>  5.48e+05</td> <td> 7.25e+05</td> <td>    0.756</td> <td> 0.449</td> <td>-8.72e+05  1.97e+06</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>is_alive_no</th>      <td> 3.595e+05</td> <td> 4.83e+05</td> <td>    0.744</td> <td> 0.457</td> <td>-5.87e+05  1.31e+06</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>is_alive_unknown</th> <td> 3.601e+05</td> <td> 4.83e+05</td> <td>    0.746</td> <td> 0.456</td> <td>-5.86e+05  1.31e+06</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>is_alive_yes</th>     <td>  3.86e+05</td> <td> 4.84e+05</td> <td>    0.798</td> <td> 0.425</td> <td>-5.62e+05  1.33e+06</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "  <th>Omnibus:</th>       <td>184929.851</td> <th>  Durbin-Watson:     </th>     <td>   1.999</td>     \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(Omnibus):</th>   <td> 0.000</td>   <th>  Jarque-Bera (JB):  </th> <td>1059739339347.922</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Skew:</th>            <td>140.251</td>  <th>  Prob(JB):          </th>     <td>    0.00</td>     \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Kurtosis:</th>       <td>24628.998</td> <th>  Cond. No.          </th>     <td>1.61e+18</td>     \n",
+       "</tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                            OLS Regression Results                            \n",
+       "==============================================================================\n",
+       "Dep. Variable:                  views   R-squared:                       0.215\n",
+       "Model:                            OLS   Adj. R-squared:                  0.215\n",
+       "Method:                 Least Squares   F-statistic:                     1044.\n",
+       "Date:                Fri, 18 May 2018   Prob (F-statistic):               0.00\n",
+       "Time:                        18:00:13   Log-Likelihood:            -6.0135e+05\n",
+       "No. Observations:               41934   AIC:                         1.203e+06\n",
+       "Df Residuals:                   41922   BIC:                         1.203e+06\n",
+       "Df Model:                          11                                         \n",
+       "Covariance Type:            nonrobust                                         \n",
+       "====================================================================================\n",
+       "                       coef    std err          t      P>|t|      [95.0% Conf. Int.]\n",
+       "------------------------------------------------------------------------------------\n",
+       "entered           -457.8647    600.536     -0.762      0.446     -1634.928   719.198\n",
+       "eig_central       4.394e+07    4.2e+05    104.636      0.000      4.31e+07  4.48e+07\n",
+       "age               -379.2397    132.182     -2.869      0.004      -638.319  -120.160\n",
+       "distance_birth      61.0989     32.602      1.874      0.061        -2.802   125.000\n",
+       "distance_death      87.2778     27.656      3.156      0.002        33.071   141.485\n",
+       "distance_delta     -26.1790     35.429     -0.739      0.460       -95.620    43.262\n",
+       "nationality_num  -3344.2506   3582.955     -0.933      0.351     -1.04e+04  3678.416\n",
+       "party_num         6177.6101   2888.531      2.139      0.032       516.030  1.18e+04\n",
+       "occupation_num    1.238e+04   2120.774      5.836      0.000      8219.179  1.65e+04\n",
+       "gender_female     5.575e+05   7.25e+05      0.769      0.442     -8.63e+05  1.98e+06\n",
+       "gender_male        5.48e+05   7.25e+05      0.756      0.449     -8.72e+05  1.97e+06\n",
+       "is_alive_no       3.595e+05   4.83e+05      0.744      0.457     -5.87e+05  1.31e+06\n",
+       "is_alive_unknown  3.601e+05   4.83e+05      0.746      0.456     -5.86e+05  1.31e+06\n",
+       "is_alive_yes       3.86e+05   4.84e+05      0.798      0.425     -5.62e+05  1.33e+06\n",
+       "==============================================================================\n",
+       "Omnibus:                   184929.851   Durbin-Watson:                   1.999\n",
+       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):    1059739339347.922\n",
+       "Skew:                         140.251   Prob(JB):                         0.00\n",
+       "Kurtosis:                   24628.998   Cond. No.                     1.61e+18\n",
+       "==============================================================================\n",
+       "\n",
+       "Warnings:\n",
+       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+       "[2] The smallest eigenvalue is 6.56e-26. This might indicate that there are\n",
+       "strong multicollinearity problems or that the design matrix is singular.\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results.summary()"
+   ]
   },
   {
    "cell_type": "code",
