--- a/model/views_prediction.ipynb
+++ b/model/views_prediction.ipynb
@@ -1311,6 +1311,422 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def merge_by(df_lst, repeat=\"Attribute\"):\n",
+    "    df = pd.concat(df_lst, axis=1)\n",
+    "    df = df.loc[:,~df.columns.duplicated()]\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Attribute</th>\n",
+       "      <th>Decision Tree Regressor</th>\n",
+       "      <th>Random Forest Regressor</th>\n",
+       "      <th>Lasso Regression</th>\n",
+       "      <th>Linear Regression</th>\n",
+       "      <th>Ridge Regression</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>gender</td>\n",
+       "      <td>0.010948</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.000000</td>\n",
+       "      <td>-4.251780e-01</td>\n",
+       "      <td>-0.440364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>entered</td>\n",
+       "      <td>0.049975</td>\n",
+       "      <td>0.259687</td>\n",
+       "      <td>-0.156473</td>\n",
+       "      <td>-1.469195e-01</td>\n",
+       "      <td>-0.146368</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>efficiency</td>\n",
+       "      <td>0.043058</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.000000</td>\n",
+       "      <td>-1.354288e-01</td>\n",
+       "      <td>-0.129605</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>eig_central</td>\n",
+       "      <td>0.112649</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.005656</td>\n",
+       "      <td>4.554804e-03</td>\n",
+       "      <td>0.004547</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>in_degree</td>\n",
+       "      <td>0.056489</td>\n",
+       "      <td>0.071643</td>\n",
+       "      <td>0.458815</td>\n",
+       "      <td>5.843011e-01</td>\n",
+       "      <td>0.583621</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>k_core</td>\n",
+       "      <td>0.171691</td>\n",
+       "      <td>0.147809</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-4.173588e-01</td>\n",
+       "      <td>-0.415258</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>out_degree</td>\n",
+       "      <td>0.022864</td>\n",
+       "      <td>0.023992</td>\n",
+       "      <td>0.176680</td>\n",
+       "      <td>4.789777e-01</td>\n",
+       "      <td>0.478574</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>age</td>\n",
+       "      <td>0.029798</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-5.583885e-03</td>\n",
+       "      <td>-0.005793</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>distance_birth</td>\n",
+       "      <td>0.033403</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.001817</td>\n",
+       "      <td>2.515433e+11</td>\n",
+       "      <td>0.000091</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>distance_death</td>\n",
+       "      <td>0.026868</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.000410</td>\n",
+       "      <td>-2.515433e+11</td>\n",
+       "      <td>0.000684</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>distance_delta</td>\n",
+       "      <td>0.030339</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-2.515433e+11</td>\n",
+       "      <td>-0.000594</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>nationality_num</td>\n",
+       "      <td>0.005486</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>6.497586e-02</td>\n",
+       "      <td>0.065098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>party_num</td>\n",
+       "      <td>0.016407</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4.361720e-03</td>\n",
+       "      <td>0.004474</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>occupation_num</td>\n",
+       "      <td>0.037986</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>9.704808e-02</td>\n",
+       "      <td>0.097222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>is_alive_no</td>\n",
+       "      <td>0.000688</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.000000</td>\n",
+       "      <td>3.102087e+09</td>\n",
+       "      <td>-0.178906</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>is_alive_unknown</td>\n",
+       "      <td>0.000156</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.000000</td>\n",
+       "      <td>3.102087e+09</td>\n",
+       "      <td>-0.327314</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>is_alive_yes</td>\n",
+       "      <td>0.051949</td>\n",
+       "      <td>0.110419</td>\n",
+       "      <td>0.149133</td>\n",
+       "      <td>3.102087e+09</td>\n",
+       "      <td>0.506220</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>year_interval_1</td>\n",
+       "      <td>0.296742</td>\n",
+       "      <td>0.386451</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-5.518638e+08</td>\n",
+       "      <td>0.347377</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>year_interval_2</td>\n",
+       "      <td>0.001777</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.309412</td>\n",
+       "      <td>-5.518638e+08</td>\n",
+       "      <td>-0.445564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>year_interval_3</td>\n",
+       "      <td>0.000726</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-5.518638e+08</td>\n",
+       "      <td>0.098187</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Attribute  Decision Tree Regressor  Random Forest Regressor  \\\n",
+       "0             gender                 0.010948                 0.000000   \n",
+       "1            entered                 0.049975                 0.259687   \n",
+       "2         efficiency                 0.043058                 0.000000   \n",
+       "3        eig_central                 0.112649                 0.000000   \n",
+       "4          in_degree                 0.056489                 0.071643   \n",
+       "5             k_core                 0.171691                 0.147809   \n",
+       "6         out_degree                 0.022864                 0.023992   \n",
+       "7                age                 0.029798                 0.000000   \n",
+       "8     distance_birth                 0.033403                 0.000000   \n",
+       "9     distance_death                 0.026868                 0.000000   \n",
+       "10    distance_delta                 0.030339                 0.000000   \n",
+       "11   nationality_num                 0.005486                 0.000000   \n",
+       "12         party_num                 0.016407                 0.000000   \n",
+       "13    occupation_num                 0.037986                 0.000000   \n",
+       "14       is_alive_no                 0.000688                 0.000000   \n",
+       "15  is_alive_unknown                 0.000156                 0.000000   \n",
+       "16      is_alive_yes                 0.051949                 0.110419   \n",
+       "17   year_interval_1                 0.296742                 0.386451   \n",
+       "18   year_interval_2                 0.001777                 0.000000   \n",
+       "19   year_interval_3                 0.000726                 0.000000   \n",
+       "\n",
+       "    Lasso Regression  Linear Regression  Ridge Regression  \n",
+       "0          -0.000000      -4.251780e-01         -0.440364  \n",
+       "1          -0.156473      -1.469195e-01         -0.146368  \n",
+       "2          -0.000000      -1.354288e-01         -0.129605  \n",
+       "3           0.005656       4.554804e-03          0.004547  \n",
+       "4           0.458815       5.843011e-01          0.583621  \n",
+       "5           0.000000      -4.173588e-01         -0.415258  \n",
+       "6           0.176680       4.789777e-01          0.478574  \n",
+       "7           0.000000      -5.583885e-03         -0.005793  \n",
+       "8          -0.001817       2.515433e+11          0.000091  \n",
+       "9          -0.000410      -2.515433e+11          0.000684  \n",
+       "10          0.000000      -2.515433e+11         -0.000594  \n",
+       "11          0.000000       6.497586e-02          0.065098  \n",
+       "12          0.000000       4.361720e-03          0.004474  \n",
+       "13          0.000000       9.704808e-02          0.097222  \n",
+       "14         -0.000000       3.102087e+09         -0.178906  \n",
+       "15         -0.000000       3.102087e+09         -0.327314  \n",
+       "16          0.149133       3.102087e+09          0.506220  \n",
+       "17          0.000000      -5.518638e+08          0.347377  \n",
+       "18         -0.309412      -5.518638e+08         -0.445564  \n",
+       "19          0.000000      -5.518638e+08          0.098187  "
+      ]
+     },
+     "execution_count": 225,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merge_by([important_features(X,y,model_dict),model_coefs(X,y,model_dict)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "country_dict = {\n",
+    "    \"USA\": \"2016_american\",\n",
+    "    \"Germany\": \"2016_german\",\n",
+    "    \"France\": \"2016_french\",\n",
+    "    \"GB\": \"2016_british\",\n",
+    "    \"Russia\": \"2016_russian\",\n",
+    "} "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def comparison_over_countries(country_dict,model,col_names=[\"Country\",\"R^2\",\"Mean absolute error\",\"neg msle\",\"mse\"]): \n",
+    "    \n",
+    "    lst = []\n",
+    "    for country, file in country_dict.items():\n",
+    "        data = pd.read_pickle(\"../data/final_sets/countries/model/{}\".format(file))\n",
+    "        data = preprocess_data_frame(data,[\"gender\"])\n",
+    "        data = normalize(data, [\"eig_central\",\"in_degree\",\"k_core\",\"out_degree\",\"efficiency\",\"views\"])\n",
+    "        X,y = split_dataframe(data,\"views\")\n",
+    "        r2,mae,msle,mse = model_score(X,y,model)\n",
+    "        lst.append([country,r2,mae,msle,mse])\n",
+    "    return pd.DataFrame(lst, columns=col_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['female', 'male']\n",
+      "{0, 1}\n",
+      "['female', 'male']\n",
+      "{0, 1}\n",
+      "['female', 'male']\n",
+      "{0, 1}\n",
+      "['female', 'male']\n",
+      "{0, 1}\n",
+      "['female', 'male']\n",
+      "{0, 1}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>R^2</th>\n",
+       "      <th>mean absolute error</th>\n",
+       "      <th>neg msle</th>\n",
+       "      <th>mse</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>USA</td>\n",
+       "      <td>0.485523</td>\n",
+       "      <td>-0.727975</td>\n",
+       "      <td>-0.012942</td>\n",
+       "      <td>-1.413071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>0.498114</td>\n",
+       "      <td>-0.694354</td>\n",
+       "      <td>-0.011017</td>\n",
+       "      <td>-1.053656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>France</td>\n",
+       "      <td>0.561124</td>\n",
+       "      <td>-0.577953</td>\n",
+       "      <td>-0.009516</td>\n",
+       "      <td>-0.869484</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>GB</td>\n",
+       "      <td>0.350482</td>\n",
+       "      <td>-0.636980</td>\n",
+       "      <td>-0.009008</td>\n",
+       "      <td>-0.898353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Russia</td>\n",
+       "      <td>0.466066</td>\n",
+       "      <td>-0.677019</td>\n",
+       "      <td>-0.011009</td>\n",
+       "      <td>-1.139933</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Country       R^2  mean absolute error  neg msle       mse\n",
+       "0      USA  0.485523            -0.727975 -0.012942 -1.413071\n",
+       "1  Germany  0.498114            -0.694354 -0.011017 -1.053656\n",
+       "2   France  0.561124            -0.577953 -0.009516 -0.869484\n",
+       "3       GB  0.350482            -0.636980 -0.009008 -0.898353\n",
+       "4   Russia  0.466066            -0.677019 -0.011009 -1.139933"
+      ]
+     },
+     "execution_count": 231,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comparison_over_countries(country_dict, lin_reg)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
